--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -71,3 +71,17 @@ deploy:
   type: git
   repo: git@github.com:Tosuke/blog.git
   branch: gh-pages
+
+
+# Plugin configurations
+autolinker:
+  enable: true
+  newWindow: true
+  urls: true
+  email: false
+  tel: false
+  twitter: true
+  hashtag: twitter
+
+math:
+  engine: 'katex'
