--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
   },
   "dependencies": {
     "@chakra-ui/core": "^0.5.2",
-    "@emotion/cache": "^10.0.27",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
-    "@types/theme-ui": "^0.3.0",
-    "create-emotion-server": "^10.0.27",
     "dayjs": "^1.8.20",
     "emotion-theming": "^10.0.27",
+    "highlight.js": "^9.18.1",
     "ky": "^0.17.0",
     "ky-universal": "^0.5.0",
+    "lowlight": "^1.13.1",
     "module-alias": "^2.2.2",
     "next": "^9.2.1",
     "preact": "^10.3.1",
@@ -26,17 +25,17 @@
     "preact-ssr-prepass": "^1.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "theme-ui": "^0.3.1"
+    "remark-parse": "^7.0.2",
+    "unified": "^8.4.2"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.0.6",
     "@next/bundle-analyzer": "^9.2.1",
+    "@types/lowlight": "^0.0.0",
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
-    "@types/styled-jsx": "^2.2.8",
+    "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.2.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   }
